[package]
name = "transfer_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
mc_protocol = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
snafu = "0.9.1"
time = { version = "0.3.53", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
uuid = { version = "1.23.4", features = ["rng"] }
